# mailbox

./: .gitignore  CMakeLists.txt  README.md  autobuild  run
broker/: CMakeLists.txt
broker/src/: main.cpp
client/: CMakeLists.txt
client-example/: CMakeLists.txt
client-example/src/: longMessage.h  long_message.h  main.cpp
client/include/client/: Connection.h  Message.h  message.h
client/src/: Connection.cpp  Message.cpp  main.cpp  message.cpp
include/: date.h  utilities.h
mailbox/: CMakeLists.txt
mailbox/src/: ConnectionReciever.cpp  ConnectionReciever.h  DurableQueue.cpp  DurableQueue.h  Queue.cpp  Queue.h  QueueManager.cpp  QueueManager.h  SimpleLogger.cpp  SimpleLogger.h  TimedQueue.cpp  TimedQueue.h  date.h  main.cpp
postman/: CMakeLists.txt
postman/include/postman/: Connection.h  Message.h  MessageTag.h  PostmanConnectionException.h  PostmanException.h
postman/src/: Connection.cpp  Message.cpp  PostmanConnectionException.cpp  PostmanException.cpp
src/: CMakeLists.txt  main.cpp
